Correct schema in project.org.

--- a/project.org
+++ b/project.org
@@ -28,11 +28,11 @@ Final:
 | objectId    | string / reference | string    | string | string      |
 |-------------+--------------------+-----------+--------+-------------|
 
-|-------------+----------+-----------|
-| id (unique) | username | entries   |
-|-------------+----------+-----------|
-| objectId    | string   | reference |
-|-------------+----------+-----------|
+|-------------+----------+---------------------|
+| id (unique) | username | entries             |
+|-------------+----------+---------------------|
+| objectId    | string   | array of references |
+|-------------+----------+---------------------|
 
 
 * TODOS
