--- a/README.org
+++ b/README.org
@@ -4,13 +4,13 @@ A customizable, online logbook for adaptive, efficient, fast logging.
 https://dry-caverns-21132.herokuapp.com/
 
 * MVP
-Unauthenticated visitors can make a log entry.
++ [X] Unauthenticated visitors can make a log entry.
 
-Log entries have an event type and description.
++ [X] Log entries have an event type and description.
 
-Log entries are stored in MongoDB.
++ [X] Log entries are stored in MongoDB.
 
-Only entries from the current day are displayed.
++ [ ] Only entries from the current day are displayed.
 
 * User Stories
 User can log in, then quickly and easily log events with a description.
