--- a/project.org
+++ b/project.org
@@ -5,7 +5,7 @@
 + [ ] Add Users and Authentication
 + [ ] Fix CORS HTTP/HTTPS ISSUE
 + [ ] Address timezone issues.
-+ [ ] Clear inputs on submission.
++ [X] Clear inputs on submission.
 
 ** Basic Backend :ARCHIVE:
 + [X] Should serve static files.
